# MicroSociety

./: .gitignore  CMakeLists.txt  README.md
actions/: Action.h  EatAction.cpp  EatAction.h  MoveAction.cpp  MoveAction.h  RestAction.cpp  RestAction.h  WorkAction.cpp  WorkAction.h
agents/: Agent.cpp  Agent.h  HumanAgent.cpp  HumanAgent.h  StudentAgent.cpp  StudentAgent.h  TraderAgent.cpp  TraderAgent.h  WorkerAgent.cpp  WorkerAgent.h
ai/: DecisionStrategy.h  NeedsBasedStrategy.cpp  NeedsBasedStrategy.h
core/: CellType.h  Exceptions.h  Grid.h  Position.h  RandomGenerator.cpp  RandomGenerator.h  Simulation.cpp  Simulation.h  SimulationConfig.cpp  SimulationConfig.h  World.cpp  World.h
data/: config.txt
patterns/: AgentFactory.cpp  AgentFactory.h  Event.h  EventBus.cpp  EventBus.h
src/: main.cpp
systems/: EventLogger.cpp  EventLogger.h  SaveManager.cpp  SaveManager.h  StatisticsManager.cpp  StatisticsManager.h
utils/: TemplateUtils.h
